add HarmonyNext AppStore

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ flutter:
         pluginClass: AppInstallerPlugin
       ios:
         pluginClass: AppInstallerPlugin
+      ohos:
+        package: com.zero.app_installer
+        pluginClass: AppInstallerPlugin
+
   # To add assets to your plugin package, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
